Adjusted wrapper height to prevent dotted image overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -149,7 +149,7 @@ li + li {
     z-index: -1; }
 
   .wrapper {
-    height: 100%;
+    height: 95%;
     margin-top: 5rem; }
 
   .logo {
@@ -159,7 +159,15 @@ li + li {
     width: 63.5rem;
     height: 51rem;
     background-color: #121725;
-    align-items: flex-start; }
+    justify-content: flex-end; }
+    .content__box {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: space-between;
+      align-items: flex-start;
+      align-content: flex-start;
+      height: 90%; }
     .content__title {
       font-size: 4.8rem;
       line-height: 5.6rem;
