--- a/assets/sass/_breakpoints.scss
+++ b/assets/sass/_breakpoints.scss
@@ -32,7 +32,7 @@
     z-index: -1;
   }
   .wrapper {
-    height: 100%;
+    height: 95%;
     margin-top: 5rem;
   }
   .logo {
@@ -42,7 +42,13 @@
     width: 63.5rem;
     height: 51rem;
     background-color: $dark-blue;
-    align-items: flex-start;
+    justify-content: flex-end;
+    &__box {
+      @include flex-column;
+      align-items: flex-start;
+      align-content: flex-start;
+      height: 90%;
+    }
     &__title {
       @include title-tablet;
       text-align: left;
